<resources>
    <string name="app_name">SportApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="football">Football</string>
    <string name="hockey">Hockey</string>
    <string name="tennis">Tennis</string>
    <string name="volleyball">Volleyball</string>
    <string name="basketball">Basketball</string>
    <string name="cybersport">Cybersport</string>
    <string name="prediction">Prediction</string>


    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
